# ProgettoPAO

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/model/classes/: Activity.cpp  Appointment.cpp  CompositeTask.cpp  Event.cpp  SimpleTask.cpp  Task.cpp
src/model/headers/: Activity.h  Appointment.h  CompositeTask.h  Event.h  SimpleTask.h  Task.h
